测试auth模块调用admin模块，测试登录接口

--- a/sa-token-auth/src/main/resources/application.yml
+++ b/sa-token-auth/src/main/resources/application.yml
@@ -16,3 +16,11 @@ spring:
       config:
         server-addr: ${spring.cloud.nacos.discovery.server-addr}
 
+logging:
+  level:
+    com.lengqi.cloud.admin.feign.*: debug
+
+#ribbon的超时时间
+ribbon:
+  ReadTimeout: 30000
+  ConnectTimeout: 30000
