--- a/sa-token-auth/pom.xml
+++ b/sa-token-auth/pom.xml
@@ -52,12 +52,6 @@
             <version>1.2.13</version>
         </dependency>
         <!-- sa-token 权限认证, 在线文档：http://sa-token.dev33.cn/ -->
-        <dependency>
-            <groupId>cn.dev33</groupId>
-            <artifactId>sa-token</artifactId>
-            <version>1.4.0</version>
-        </dependency>
-
         <!-- 工具类大全 - 在线文档：https://hutool.cn/docs/#/ -->
         <dependency>
             <groupId>cn.hutool</groupId>
@@ -100,5 +94,11 @@
             <artifactId>admin-feign-client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot-starter</artifactId>
+            <version>1.18.0</version>
+        </dependency>
+
     </dependencies>
 </project>
