--- a/sa-token-common/pom.xml
+++ b/sa-token-common/pom.xml
@@ -84,9 +84,11 @@
             <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
 
     </dependencies>
-
 
 </project>
