--- a/sa-token-common/pom.xml
+++ b/sa-token-common/pom.xml
@@ -88,6 +88,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-core</artifactId>
+            <version>1.18.0</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
